--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
