--- a/back-end/SkinCareService/src/main/resources/application.yaml
+++ b/back-end/SkinCareService/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ server:
     context-path: /identity
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/database"
+    url: "jdbc:mysql://localhost:3306/swp_db"
     username: root
-    password: root
+    password: 12345Aa
 
   jpa:
     hibernate:
