--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
