--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.1",
+    "sparkle-salon-fe": "file:",
     "zod": "^3.24.1"
   },
   "devDependencies": {
