--- a/back-end/SkinCareService/pom.xml
+++ b/back-end/SkinCareService/pom.xml
@@ -89,6 +89,25 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okio</groupId>
+			<artifactId>okio</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
+
+
+
+
+
+
+
+
 
 	</dependencies>
 
