--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
