--- a/back-end/SkinCareService/src/main/resources/application.yaml
+++ b/back-end/SkinCareService/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /swp
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/swp_test"
+    url: "jdbc:mysql://localhost:3306/swp"
     username: root
     password: 1234
 
