--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.8.1",
     "chart.js": "^4.4.7",
     "flowbite-react": "^0.10.2",
