--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -17,11 +17,13 @@
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
     "openapi-typescript-codegen": "^0.29.0",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.2",
