--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.66.9",
+    "@types/dompurify": "^3.2.0",
     "axios": "^1.8.1",
     "chart.js": "^4.4.7",
+    "dompurify": "^3.2.4",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
     "openapi-typescript-codegen": "^0.29.0",
