--- a/back-end/SkinCareService/src/main/resources/application.yaml
+++ b/back-end/SkinCareService/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/swp"
     username: root
-    password: 12345Aa
+    password: 1234
 
   jpa:
     hibernate:
