--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.2.4",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
+    "mysql2": "^3.12.0",
     "openapi-typescript-codegen": "^0.29.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
