--- a/back-end/SkinCareService/src/main/resources/application.yaml
+++ b/back-end/SkinCareService/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/swp"
+    url: "jdbc:mysql://localhost:3306/swp_db"
     username: root
-    password: 1234
+    password: 12345Aa
 
   jpa:
     hibernate:
