--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -17,9 +17,11 @@
     "chart.js": "^4.4.7",
     "dompurify": "^3.2.4",
     "flowbite-react": "^0.10.2",
+    "form-data": "^4.0.2",
     "framer-motion": "^12.4.7",
     "mysql2": "^3.12.0",
     "openapi-typescript-codegen": "^0.29.0",
+    "query-string": "^9.1.1",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
