--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -26,7 +26,9 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "proxy": "http://localhost:8080"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
