--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.10.2",
     "form-data": "^4.0.2",
     "framer-motion": "^12.4.7",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.12.0",
     "openapi-typescript-codegen": "^0.29.0",
     "query-string": "^9.1.1",
