--- a/back-end/SkinCareService/pom.xml
+++ b/back-end/SkinCareService/pom.xml
@@ -61,6 +61,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!-- Apache Commons Codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
 
 		<!-- Security -->
 		<dependency>
