--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.66.9",
     "@types/dompurify": "^3.2.0",
