--- a/sparkle-salon-fe/package.json
+++ b/sparkle-salon-fe/package.json
@@ -18,6 +18,7 @@
     "@types/dompurify": "^3.2.0",
     "axios": "^1.8.1",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "flowbite-react": "^0.10.2",
     "form-data": "^4.0.2",
