--- a/back-end/SkinCareService/src/main/resources/application.yaml
+++ b/back-end/SkinCareService/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/swp_db"
     username: root
-    password: 12345Aa
+    password: 1234
 
   jpa:
     hibernate:
